fix: Tidy up misaligned empty state

--- a/client/components/SettingsSection/settingsSection.scss
+++ b/client/components/SettingsSection/settingsSection.scss
@@ -37,12 +37,6 @@
 				.bp3-callout {
 					font-size: 16px;
 				}
-				.empty-state-container {
-					padding-top: 50px;
-					.bp3-non-ideal-state {
-						align-items: flex-start;
-					}
-				}
 			}
 		}
 	}
